Убрал возможность кликать на текст на страницах avtorizovan и main search. Добавил, но не подключил страницы форму для оплаты и восстановления пароля.

--- a/vinautocheck/vincheck/templates/vincheck/main_search.html
+++ b/vinautocheck/vincheck/templates/vincheck/main_search.html
@@ -48,38 +48,38 @@
             <div class="footer_container">
                 <div class="footer_containernarrow">
                     <div class="footer_blocks">
-                        <a href="" class="footer_block">
+                        <a  class="footer_block">
                             История технических <p>осмотров</p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a  class="footer_block">
                             Нахождение в <p>розыске</p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a  class="footer_block">
                             Залоги и <p>ограничения</p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a  class="footer_block">
                             Проверка <p>на ДТП</p>
                         </a>
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="line"></div>
-                        <a href="" class="footer_block">
+                        <a  class="footer_block">
                             Сведения технических и<p>диагностических осмотров</p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a  class="footer_block">
                             Сведения о нахождение <p>автомобиля в розыске</p>
                             <p>
                                 на территории РБ и РФ
                             </p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a  class="footer_block">
                             Сведения о нахождение <p>автомобиля в залоге</p>
                             <p>
                                 по данным на 2022 год
                             </p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a  class="footer_block">
                             Возможность проверить<p>участие авто в</p>
                             <p>
                                 ДТП
