--- a/vinautocheck/vincheck/static/vincheck/css/style2.css
+++ b/vinautocheck/vincheck/static/vincheck/css/style2.css
@@ -25,7 +25,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 html, body {
     height: 100%;
-    line-height: 1;
+    /*line-height: 1;*/
+    background-color: #ddeefc;
 }
  [class*="_container"] {
     max-width: 1200px;
