--- a/vinautocheck/vincheck/templates/vincheck/tovar.html
+++ b/vinautocheck/vincheck/templates/vincheck/tovar.html
@@ -18,7 +18,7 @@
         <header>
             <div class="header_container">
                 <div class="header_content">
-                    <a href="avtorizovan.html" class="button_login">Главная</a>
+                    <a href="{% url 'avtorizovan' %}" class="button_login">Главная</a>
                 </div>
             </div>
         </header>
