Подключил форму для восстановления пароля

--- a/vinautocheck/vincheck/templates/vincheck/main_search.html
+++ b/vinautocheck/vincheck/templates/vincheck/main_search.html
@@ -37,7 +37,7 @@
                             <div class="window"
                                 data-tooltip="VIN-код - это уникальный код транспортного средства, состоящий из 17 знаков">
                                 <input type="submit" value="?" class="first_button"></div>
-                                <a href = "signin.html" class="second_button"> Проверить </a>
+                                <a href = "{% url 'tovar' %}" class="second_button"> Проверить </a>
                         </form>
                     </div>
                 </div>
