--- a/vinautocheck/vincheck/templates/vincheck/signin.html
+++ b/vinautocheck/vincheck/templates/vincheck/signin.html
@@ -33,7 +33,7 @@
       <a href="{% url 'avtorizovan' %}" button class="form_btn">Войти</button></a>
     </p>
     <p>
-      <a href="forgotform.html" class="form_forgot">Восстановить пароль </a>
+      <a href="{% url 'forgotform' %}" class="form_forgot">Восстановить пароль </a>
     </p>
   </form>
 
