Регистрация и авторизация теперь проходят на разных страницах

--- a/vinautocheck/vincheck/templates/vincheck/avtorizovan.html
+++ b/vinautocheck/vincheck/templates/vincheck/avtorizovan.html
@@ -20,7 +20,7 @@
         <header>
             <div class="header_container">
                 <div class="header_content">
-                    <a href="personalcabinet.html" class="button_personalcabinet">Личный кабинет</a>
+                    <a href="personalcabinet.html" class="button_personalcabinet">Личный кабинет</a> | <a href="{% url 'logout' %}">Выйти</a>
                 </div>
             </div>
         </header>
