--- a/vinautocheck/vincheck/templates/vincheck/main_search.html
+++ b/vinautocheck/vincheck/templates/vincheck/main_search.html
@@ -19,7 +19,11 @@
         <header>
             <div class="header_container">
                 <div class="header_content">
-                    <a href="{% url 'signin' %}" class="button_login">Войти</a>
+                    {% if request.user.is_authenticated %}
+                    <a href="personalcabinet.html" class="button_personalcabinet">Личный кабинет</a> | <a href="{% url 'logout' %}">Выйти</a>
+                    {% else %}
+                    <a href="{% url 'signup' %}" class="button_login">Войти</a>
+                    {% endif %}
                 </div>
             </div>
         </header>
