--- a/vinautocheck/vincheck/templates/vincheck/signup.html
+++ b/vinautocheck/vincheck/templates/vincheck/signup.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <head>
+  <title> Регистрация </title>
   <meta charset = "utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0 ">
@@ -12,15 +13,15 @@
       rel="stylesheet">
 </head>
 <body>
-
-
-<form class="box" method="post">
-  {% csrf_token %}
-  <h1>Вход</h1>
-  {{ form.as_p }}
-  <input type="submit"  value="Войти" class="signup-btn">
+  <div class="signup-form">
+    <form method="post">
+      {% csrf_token %}
+      <h1>Регистрация</h1>
+      {{ form.as_p }}
+      <input type="submit"  value="Создать аккаунт" class="signup-btn">
+      <a href="{% url 'signin' %}">Уже зарегистрированы?</a>
 </form>
-
+</div>
 </body>
 <style media="screen">
 body{
@@ -28,24 +29,38 @@ body{
   padding: 0;
   font-family: sans-serif;
   background:#ddeefc;
-
 }
-.box{
-  width:250px;
+
+.signup-form{
+  width: 250px;
   padding: 40px;
+  text-align: center;
   position:absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
 }
-.box h1{
-  color:black;
+.signup-form h1{
+  font-family: sans-serif;
   text-transform: uppercase;
-  text-align: center;
+  color: black;
   font-weight: 500;
 }
-.box input[type = "text" ],.box input[type = "password"]{
+
+.signup-form input {
+  display: block;
+  font-family: sans-serif;
+  width: 100%;
+  padding: 0 16px;
+  height: 44px;
+  text-align: center;
+  box-sizing: border-box;
+  outline: none;
+  border-radius: 24px;
+  transition: 0.25s;
+}
+.txtb{
   border: 0;
   background: none;
   display: block;
@@ -55,17 +70,20 @@ body{
   padding: 14px 10px;
   width: 200px;
   outline: none;
-  color:black;
+  color:white;
   border-radius: 24px;
   transition: 0.25s;
 }
-.box input[type = "text" ]:focus,.box input[type = "password"]:focus{
-  width: 200px;
+
+.txtb:focus{
+  width: 280px;
   border-color: #ddeefc;
 }
-.box input[type = "submit"]{
+
+.signup-btn{
+  font-family: sans-serif;
   border: 0;
-  background: #ddeefc;
+  background: none;
   display: block;
   margin:20px auto;
   text-align: center;
@@ -77,16 +95,25 @@ body{
   transition: 0.25s;
   cursor: pointer;
 }
-.box input[type = "submit"]:hover{
-  background: #6495ED;
+
+.signup-btn:hover{
+  background: #3498db;
 }
-.form_btn{
-  border: none;
-  cursor: pointer;
-  font-size: inherit;
-  background-color:#6495ED; /*#03a9f4;*/
-  color: white;
-  padding: 10px 50px;
+
+.signup-form a{
+  text-decoration: none;
+  color:  black;
+  font-family: sans-serif;
+  padding: 14px 10px;
+  transition: 0.25s;
+  border-radius: 24px;
+  display: block;
+
 }
+
+.signup-form a:hover{
+  background: #ddeefc;
+}
+
 </style>
 </html>
