добавил страницу для изменения пароля, создал функцию для отправки сообщения на почтовый адрес и подключил её к странице forgotform

--- a/vinautocheck/vincheck/templates/vincheck/recoverypassword.html
+++ b/vinautocheck/vincheck/templates/vincheck/recoverypassword.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset = "utf-8">
-  <title> Восстановить пароль </title>
+  <title> Восстановление пароля </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -11,7 +11,7 @@
       <h1>Восстановить пароль</h1>
       {% csrf_token %}
       {{ form.as_p }}
-      <input type="submit"  value="Отправить" class="signup-btn">
+      <input type="submit"  value="Изменить пароль" class="signup-btn">
 </form>
 </div>
 </body>
