Доделал восстановление пароля по почте, остальсь только страницы сделать красивыми

--- a/vinautocheck/vincheck/templates/vincheck/password_reset.html
+++ b/vinautocheck/vincheck/templates/vincheck/password_reset.html
@@ -10,10 +10,11 @@
     <form method="post">
       <h1>Восстановить пароль</h1>
       {% csrf_token %}
-      {{ form.as_p }}
+      <input type="email" name="email" autocomplete="email" maxlength="254" required
+           id="id_email" class="txtb" placeholder="Почта">
       <input type="submit"  value="Отправить" class="signup-btn">
-</form>
-</div>
+    </form>
+  </div>
 </body>
 <style media="screen">
 body{
