--- a/vinautocheck/vincheck/templates/vincheck/avtorizovan.html
+++ b/vinautocheck/vincheck/templates/vincheck/avtorizovan.html
@@ -20,7 +20,7 @@
         <header>
             <div class="header_container">
                 <div class="header_content">
-                    <a href="{% url 'recoverypassword' %}" class="button_personalcabinet">Восстановление пароля</a>
+                    <a href="{% url 'password_reset' %}" class="button_personalcabinet">Восстановление пароля</a>
                     <a href="{% url 'personalcabinet' %}" class="button_personalcabinet">Личный кабинет</a>
                 </div>
             </div>
