--- a/vinautocheck/vincheck/templates/vincheck/email_password_reset.html
+++ b/vinautocheck/vincheck/templates/vincheck/email_password_reset.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<table height="36" align="center" valign="middle" border="0" cellpadding="0"
-       cellspacing="0" class="tablet-button" st-button="edit">
-    <tbody>
-    <tr>
-        <td width="auto" align="center" valign="middle" height="36">
-            <a style="color: #ffffff; text-align:center;text-decoration: none;"
-            href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">
-                    СБРОСИТЬ ПАРОЛЬ</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
-</html>
+{% autoescape off %}
+<h3>
+    Hi {{ user.get_username }},
+</h3>
+
+To initiate the password reset process for your account on {{ domain }},
+click the link below:
+<br><br>
+<a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">Reset password</a>
+<br><br>
+If clicking the link above doesn't work, please copy and paste the URL in a new browser
+window instead.
+
+{% endautoescape %}
