--- a/vinautocheck/vincheck/templates/vincheck/index.html
+++ b/vinautocheck/vincheck/templates/vincheck/index.html
@@ -39,7 +39,11 @@
                             <div class="window"
                                 data-tooltip="VIN-код - это уникальный код транспортного средства, состоящий из 17 знаков">
                                 <input type="submit" value="?" class="first_button"></div>
-                                <a href = "{% block href %} {% endblock %}" class="second_button"> Проверить </a>
+                                {% if request.user.is_authenticated %}
+                                <a href = "{% url 'tovar' %}" class="second_button"> Проверить </a>
+                                {% else %}
+                                <a href = "{% url 'signin' %}" class="second_button"> Проверить </a>
+                                {% endif %}
                         </form>
                     </div>
                 </div>
