--- a/vinautocheck/vincheck/templates/vincheck/main_search.html
+++ b/vinautocheck/vincheck/templates/vincheck/main_search.html
@@ -19,7 +19,11 @@
         <header>
             <div class="header_container">
                 <div class="header_content">
+                    {% if request.user.is_authenticated %}
+                    <a href="{% url 'personalcabinet' %}" class="button_login">Личный кабинет</a>
+                    {% else %}
                     <a href="{% url 'signin' %}" class="button_login">Войти</a>
+                    {% endif %}
                 </div>
             </div>
         </header>
