--- a/vinautocheck/vincheck/templates/vincheck/index.html
+++ b/vinautocheck/vincheck/templates/vincheck/index.html
@@ -33,17 +33,13 @@
                     </div>
                     <div class="main_form">
                         <form class="vin" method="post">
+                            {% csrf_token %}
                             <fieldset>
                                 {% block fieild %}{% endblock %}
                             </fieldset>
                             <div class="window"
-                                data-tooltip="VIN-код - это уникальный код транспортного средства, состоящий из 17 знаков">
-                                <input type="submit" value="?" class="first_button"></div>
-                                {% if request.user.is_authenticated %}
-                                <a href = "{% url 'tovar' %}" class="second_button"> Проверить </a>
-                                {% else %}
-                                <a href = "{% url 'signin' %}" class="second_button"> Проверить </a>
-                                {% endif %}
+                                data-tooltip="VIN-код - это уникальный код транспортного средства, состоящий из 17 знаков"></div>
+                                <input type="submit"  value="Отправить" class="second_button">
                         </form>
                     </div>
                 </div>
