--- a/vinautocheck/vincheck/templates/vincheck/tovar.html
+++ b/vinautocheck/vincheck/templates/vincheck/tovar.html
@@ -51,7 +51,7 @@
                         <li><p>Сведения о розыске,</p>
                           залогах и ограничениях</li>
                       </ul>
-                      <a href="formofpayment.html"> Купить от 10BYN </a>
+                      <a href="{% url 'checkbox2' %}"> Купить от 10BYN </a>
                     </div>
                   </div>
                   <div class="col">
@@ -69,7 +69,7 @@
                         <li></li>
                         <li></li>
                       </ul>
-                      <a href="formofpayment.html"> Купить от 10BYN </a>
+                      <a href="{% url 'checkbox' %}"> Купить от 10BYN </a>
                     </div>
 
                   </div>
