Изменила положение кнопки "Назад" + пофиксила положение других составляющих

--- a/vinautocheck/vincheck/templates/vincheck/check_box.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box.html
@@ -50,6 +50,7 @@ body {
 .button_back{
   position: relative;
   float: left;
+  margin-bottom: -7%;
 }
 .back {
     text-decoration: none;
@@ -61,6 +62,7 @@ body {
     font-weight: 600;
     padding: 10px 30px 10px 30px;
     text-align: center;
+    float: right;
 }
 .checkbox{
   display: block;
