--- a/vinautocheck/vincheck/templates/vincheck/check_box2.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box2.html
@@ -21,7 +21,7 @@
     </div>
       <input class="checkbox_input" type="checkbox" id="checkbox_1" >
     <label class="checkbox_label" for="checkbox_1">Проверить реестр залогов РБ</label>
-    <p>VIN</p>
+    <p>VIN:</p>
   </div>
   <div class="itogo">
     <p>Итого<сумма></p>
@@ -49,6 +49,7 @@ body {
 .button_back{
   position: relative;
   float: left;
+  margin-bottom: -3%;
 }
 .back {
     text-decoration: none;
@@ -60,6 +61,7 @@ body {
     font-weight: 600;
     padding: 10px 30px 10px 30px;
     text-align: center;
+    float: right;
 }
 .checkbox{
   display: block;
