Добавил подгрузку vin на чекбоксах

--- a/vinautocheck/vincheck/templates/vincheck/check_box.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box.html
@@ -22,7 +22,7 @@
       <input class="checkbox_input" type="checkbox" id="checkbox_1" >
     <label class="checkbox_label" for="checkbox_1">Проверить реестр залогов РБ</label>
     <p>Отчету n дней</p>
-    <p>VIN:</p>
+    <p>VIN:{{ message }}</p>
   </div>
   <div class="itogo">
     <p>Итого<сумма></p>
