--- a/vinautocheck/vincheck/templates/vincheck/check_box2.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box2.html
@@ -21,7 +21,7 @@
     </div>
       <input class="checkbox_input" type="checkbox" id="checkbox_1" >
     <label class="checkbox_label" for="checkbox_1">Проверить реестр залогов РБ</label>
-    <p>VIN:</p>
+    <p>VIN:{{ message }}</p>
   </div>
   <div class="itogo">
     <p>Итого<сумма></p>
