--- a/vinautocheck/vincheck/templates/vincheck/password_reset_done.html
+++ b/vinautocheck/vincheck/templates/vincheck/password_reset_done.html
@@ -33,9 +33,10 @@
                     </div>
                     </div>
                 </div>
-            <div>
-                <p>Письмо с инструкциями по восстановлению пароля отправлено. Мы отправили вам инструкцию по восстановлению пароля на указанный адрес электронной почты.
-                Если вы не получили письмо, пожалуйста, убедитесь, что вы ввели адрес с которым вы зарегистрировались, и проверьте папку со спамом.</p>
+            <div class="message">
+                <h1>Письмо с инструкциями по восстановлению пароля отправлено.</h1>
+                <p>Мы отправили вам инструкцию по восстановлению пароля на указанный адрес электронной почты.</p>
+                <p>Если вы не получили письмо, пожалуйста, убедитесь, что вы ввели адрес с которым вы зарегистрировались, и проверьте папку со спамом.</p>
             </div>
         </main>
     </div>
@@ -65,7 +66,7 @@ img {
     vertical-align: top;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
     font-weight: inherit;
     font-size: inherit;
 }
@@ -87,6 +88,24 @@ html, body {
 }
 body {
 
+}
+.message{
+  font-family: "Montserrat";
+  font-size: 17px;
+  text-align: center;
+  border-radius:24PX;
+  box-sizing: border-box;
+  font-weight: 500;
+  padding: 10px 10px 10px 10px;
+  border-radius:24PX;
+  display: grid;
+}
+.message h1{
+  color:black;
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  display: grid;
 }
 .wrapper {
     overflow: hidden;
